--- a/src/ShaderDocument/ShaderDocumentView.xaml
+++ b/src/ShaderDocument/ShaderDocumentView.xaml
@@ -1,11 +1,14 @@
 ﻿<UserControl x:Class="ShaderStudio.ShaderDocumentView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:codeeditor="clr-namespace:Gemini.Modules.CodeEditor.Controls;assembly=Gemini.Modules.CodeEditor"
-			 xmlns:cal="http://www.caliburnproject.org">
+			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			xmlns:codeeditor="clr-namespace:Gemini.Modules.CodeEditor.Controls;assembly=Gemini.Modules.CodeEditor">
+	<UserControl.Resources>
+		<Style TargetType="codeeditor:CodeEditor">
+			<Setter Property="Background" Value="{DynamicResource MenuPopupDefaultBackground}" />
+			<Setter Property="Foreground" Value="{DynamicResource MenuPopupDefaultText}" />
+		</Style>
+	</UserControl.Resources>
 	<Grid>
-		<!--<TextBox x:Name="ShaderSourceCode"/>-->
-		<codeeditor:CodeEditor Document="{Binding Document}" SyntaxHighlighting="C#"
-							   FontSize="16"/>
+		<codeeditor:CodeEditor Document="{Binding Document}" SyntaxHighlighting="glsl" FontSize="16" />
 	</Grid>
 </UserControl>
