--- a/src/ShaderDocument/ShaderDocumentView.xaml
+++ b/src/ShaderDocument/ShaderDocumentView.xaml
@@ -1,14 +1,21 @@
-﻿<UserControl x:Class="ShaderStudio.ShaderDocumentView"
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			xmlns:codeeditor="clr-namespace:Gemini.Modules.CodeEditor.Controls;assembly=Gemini.Modules.CodeEditor">
+﻿<UserControl x:Class="ShaderStudio.ShaderDocument.ShaderDocumentView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
+			 mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
 	<UserControl.Resources>
-		<Style TargetType="codeeditor:CodeEditor">
+		<Style TargetType="avalonEdit:TextEditor">
 			<Setter Property="Background" Value="{DynamicResource MenuPopupDefaultBackground}" />
 			<Setter Property="Foreground" Value="{DynamicResource MenuPopupDefaultText}" />
 		</Style>
 	</UserControl.Resources>
 	<Grid>
-		<codeeditor:CodeEditor Document="{Binding Document}" SyntaxHighlighting="glsl" FontSize="16" />
+		<avalonEdit:TextEditor Name="textEditor" 
+			Document="{Binding Document}" SyntaxHighlighting="glsl" 
+			FontFamily="Consolas" FontSize="16" ShowLineNumbers="True" 
+			HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
 	</Grid>
 </UserControl>
